<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zezeno</groupId>
	<artifactId>zeze-java</artifactId>
	<version>1.5.3-SNAPSHOT</version>

	<name>zeze-java</name>
	<description>A distributed transaction framework based on cache coherence embedded in Java</description>
	<url>https://github.com/e2wugui/zeze</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>lichenghua</name>
			<email>e2wugui@163.com</email>
		</developer>
		<developer>
			<name>dwing</name>
			<email>dwing4g@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/e2wugui/zeze</url>
	</scm>

	<distributionManagement>
		<!--repository>
			<id>releases</id>
			<url>http://10.12.7.230:9081/repository/maven-releases/</url>
		</repository-->
		<snapshotRepository>
			<id>snapshots</id>
			<url>http://10.12.7.230:9081/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>central</id>
			<name>central-releases</name>
			<url>https://s01.oss.sonatype.org/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<debuglevel>source,lines,vars</debuglevel>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:deprecation</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<executions>
					<execution>
						<!--
						<goals>
							<goal>jar</goal>
						</goals>
						-->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<additionalJOptions>
						<additionalJOption>-Xdoclint:none</additionalJOption>
						<additionalJOption>--add-exports</additionalJOption>
						<additionalJOption>java.base/sun.security.rsa=ALL-UNNAMED</additionalJOption>
						<additionalJOption>--add-exports</additionalJOption>
						<additionalJOption>java.base/sun.security.util=ALL-UNNAMED</additionalJOption>
						<additionalJOption>--add-exports</additionalJOption>
						<additionalJOption>java.base/sun.security.x509=ALL-UNNAMED</additionalJOption>
					</additionalJOptions>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId><!-- https://central.sonatype.com/ -->
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.6.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
					<autoPublish>false</autoPublish>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>6.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/zeze.git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<log4j.version>2.24.3</log4j.version>
		<annotations.version>26.0.2</annotations.version>
		<pcollectons.version>4.0.2</pcollectons.version>
		<rocksdbjni.version>9.10.0</rocksdbjni.version>
		<netty.version>4.1.119.Final</netty.version>
		<slf4j.version>2.0.17</slf4j.version>
		<!--guava.version>32.1.3-jre</guava.version-->
		<fastjson2.version>2.0.56</fastjson2.version>
		<tikv.version>3.3.5</tikv.version>
		<druid.version>1.2.24</druid.version>
		<mysql-connector-j.version>8.4.0</mysql-connector-j.version>
		<jedis.version>5.2.0</jedis.version>
		<aws-java-sdk-dynamodb.version>1.12.780</aws-java-sdk-dynamodb.version>
		<fdb-java.version>7.3.47</fdb-java.version>
		<rocketmq-client.version>4.9.8</rocketmq-client.version>
		<javaee-api.version>8.0.1</javaee-api.version>
		<jgrapht-core.version>1.5.2</jgrapht-core.version>
		<opencsv.version>5.10</opencsv.version>
		<zstd-jni.version>1.5.7-1</zstd-jni.version>
		<consul-api.version>1.4.5</consul-api.version>
		<freemarker.version>2.3.34</freemarker.version>
		<thymeleaf.version>3.1.3.RELEASE</thymeleaf.version>
		<prometheus.version>1.3.6</prometheus.version>
		<junit.version>4.13.2</junit.version>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>${annotations.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.pcollections/pcollections -->
		<dependency>
			<groupId>org.pcollections</groupId>
			<artifactId>pcollections</artifactId>
			<version>${pcollectons.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni -->
		<dependency>
			<groupId>org.rocksdb</groupId>
			<artifactId>rocksdbjni</artifactId>
			<version>${rocksdbjni.version}</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec-http</artifactId>
			<version>${netty.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport-native-epoll</artifactId>
			<version>${netty.version}</version>
			<classifier>linux-x86_64</classifier>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>${log4j.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<!--
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
			<scope>provided</scope>
		</dependency>
		-->

		<!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>${fastjson2.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.tikv/tikv-client-java -->
		<dependency>
			<groupId>org.tikv</groupId>
			<artifactId>tikv-client-java</artifactId>
			<version>${tikv.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>${druid.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector-j.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>${jedis.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-dynamodb</artifactId>
			<version>${aws-java-sdk-dynamodb.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.foundationdb</groupId>
			<artifactId>fdb-java</artifactId>
			<version>${fdb-java.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-client</artifactId>
			<version>${rocketmq-client.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>${jgrapht-core.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${opencsv.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.luben</groupId>
			<artifactId>zstd-jni</artifactId>
			<version>${zstd-jni.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.ecwid.consul</groupId>
			<artifactId>consul-api</artifactId>
			<version>${consul-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>${freemarker.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>${thymeleaf.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>prometheus-metrics-core</artifactId>
			<version>${prometheus.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>prometheus-metrics-instrumentation-jvm</artifactId>
			<version>${prometheus.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.prometheus</groupId>
			<artifactId>prometheus-metrics-exporter-httpserver</artifactId>
			<version>${prometheus.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
